Add car crashes and user scores

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="score"></div>
+    <div class="score hidden"></div>
     <div class="game">
         <button class="game__start" type="button">Начать игру</button>
         <div class="game-area"></div>
